k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homp
  labels:
    app.kubernetes.io/part-of: homp
